# Ege-languague-simple

./: CMakeLists.txt  README.md  jse_native.cc  package-lock.json
.github-workflows/: build.yml
.github/workflows/: build.yml
